--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">Cleverlance Mobile Test App</string>
+    <string name="app_name">Eye</string>
 
-    <string name="prompt_username">Username</string>
-    <string name="prompt_password">Password</string>
+    <string name="prompt_username">Username [ciompa]</string>
+    <string name="prompt_password">Password [frantisek]</string>
     <string name="action_download_image">Download image</string>
     <string name="invalid_username">Username can not be empty</string>
     <string name="invalid_password">Password must be >3 characters</string>
